# Aetherbourne

./: Cargo.toml  MVP.md  OVERVIEW.md  README.md  README_old.md  TODO.md  file_struct_creation.py  full.txt  lmmrouter.js,  notes.md  package-lock.json  package.json
aetherbourne/: Cargo.toml  README.md
aetherbourne/docs/: systems.md
aetherbourne/src/: main.rs
aetherbourne/src/app/: input.rs  selection.rs
aetherbourne/src/data/: loaders.rs  registry.rs
aetherbourne/src/ecs/: world.rs
aetherbourne/src/generation/: biome_gen.rs  mineral_gen.rs  (+1 more)
docs/: IMPLEMENTATION_SUMMARY.md  action-system.md  actions.md  affordance-system.md  affordances.md  architecture.md  behavior-systems.md  civilization-culture.md  cognitive-engine.md  conlang.md  data-schema.md  entities.md  equipment-system.md  evolution-genetics.md  file_structure.md  integration-map.md  interaction-engine.md  items.md  linguistics-naming.md  philosophy.md  physiology.md  pipeline.md  procedural_gen_spec.md  resource-flow-system.md  spatial-system.md  systems-math.md  time-calendar.md  time-system.md  weather.md  world-systems.md
examples/: conlang_demo.rs
src/: main.rs
src/app/: camera.rs  time.rs
src/data/: mod.rs
src/debug/: debug_draw.rs  metrics.rs  mod.rs  tracing.rs
src/generation/: conlang.rs  fauna_gen.rs  flora_gen.rs  noise.rs
src/rendering/: camera_view.rs  snapshot.rs
src/simulation/: debug.rs  mod.rs  phases.rs  pipeline.rs  sim_context.rs  tick.rs
src/ui/: ui.rs
src/utils/: timing.rs
src/world/: memory.rs  queries.rs  region.rs  spatial_index.rs  world.rs
(+59 files in other folders)
