[package]
name = "aetherbourne"
version = "0.1.0"
edition = "2021"

authors = ["Your Name <you@example.com>"]
description = "Aetherbourne simulation project."
license = "MIT"

[dependencies]
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
ron = "0.8"
log = "0.4"
env_logger = "0.11"
glam = "0.27"
hecs = "0.10"
rayon = "1.10"
noise = "0.8"
uuid = { version = "1", features = ["v4"] }
smallvec = "1.13"
